Fixes problem showing overlapped text in main page

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -185,6 +185,8 @@ body {
    font-size: 32px;
    color: #E9E9E9;
    padding-top: 40px;
+   line-height: 40px;
+   display: block;
 }
 
 /* in the index: hardware ... */
